k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    cert.certmanager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: azure/application-gateway
  tls:
  - hosts:
    - gitlab.local.com
    secretName: gitlab-tls-cert
  rules:
  - host: gitlab.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
